--- a/ios/rus.html
+++ b/ios/rus.html
@@ -233,6 +233,10 @@
             height: 110px; /* Увеличенный размер иконок */
             margin-bottom: 15px; /* Отступ между иконками */
         }
+
+                h2 {
+            text-shadow: -9px 13px 10px black;
+        }
     </style>
 </head>
 <body>
@@ -242,7 +246,7 @@
         <img src="menu-panel/on.png" alt="Звук включен" class="menu-icon" id="sound-icon">
     </div>
     <div class="main-container">
-        <h1 id="trap-count-label"><img src="Telegram_Messenger.png" style="margin: 0 0 -20px;" width="100" alt="">reynmines_bot</h1>
+        <h2 id="trap-count-label"><img src="Telegram_Messenger.png" style="margin: 0 0 -20px;" width="100" alt="">reynmines_bot</h2>
         <h1 id="loading-text">
             <span>R</span>
             <span>E</span>
